# camellia

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  Vagrantfile  devenv.nix  flake.nix  shell.nix
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
camellia/: Cargo.toml  build.rs
camellia-net/: Cargo.toml
camellia-net/examples/: bounce.rs  forward.rs
camellia-net/src/: error.rs
camellia-net/src/socket/: af_xdp.rs
camellia-net/src/umem/: frame.rs  mmap.rs  mod.rs
camellia-net/tests/: forward_test.rs  io_test.rs
camellia/benches/: forward.rs
camellia/benches/common/: mod.rs  stdenv.rs  veth.rs
camellia/examples/: bounce.rs  forward.rs
camellia/src/: error.rs  lib.rs
camellia/src/bpf/: vmlinux.h  xdp_redirect.bpf.c
camellia/src/bpf/.output/: xdp_redirect.skel.rs
camellia/src/socket/: af_xdp.rs  mod.rs
camellia/src/umem/: base.rs  frame.rs  libxdp.rs  mmap.rs  mod.rs  shared.rs  umem.rs
camellia/tests/: forward_test.rs  io_test.rs  veth_test.rs
camellia/tests/common/: mod.rs  netns.rs  stdenv.rs  veth.rs
camellia/tests/scripts/: clean_ns.sh
libxdp-sys/: Cargo.toml  build.rs  wrapper.h
libxdp-sys/src/: bindings.rs  lib.rs
libxdp-sys/tests/: tests.rs
nix/: camellia-machine.xml  camellia-machine.xml.j2  configuration.nix
test-utils/: Cargo.toml
test-utils/src/: netns.rs  stdenv.rs  veth.rs
tools/: clean_namespace.sh  generate_image.sh
