[package]
name = "camellia-net"
version = "0.0.1"
edition = "2021"
description = "A high-performance AF_XDP networking library for Linux"
license = "MIT OR Apache-2.0"
repository = "https://github.com/minhuw/camellia"
keywords = ["xdp", "af_xdp", "networking", "ebpf", "kernel-bypass"]
categories = ["network-programming", "os::linux-apis"]

[dependencies]
anyhow = "1.0.71"
libxdp-sys = { version = "0.2.4", features = ["vendored"] }
libbpf-rs = "0.25.0"
libc = "0.2.142"
nix = { version = "0.28.0", features = ["poll", "mman", "event"]}
thiserror = "1.0.40"
log = "0.4.17"
tracing = "0.1.37"
rlimit = "0.10.1"

[dev-dependencies]
core_affinity = "0.8.0"
etherparse = "0.14.3"
env_logger = "0.11.3"
once_cell = "1.17.1"
criterion = "0.5.1"
clap = { version = "4.5.7", features = ["derive"] }
humansize = "2.1.3"
ctrlc = "3.2.5"
test-utils = { path = "../test-utils" }
