[package]
name = "camellia"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
libxdp-sys = { path = "../libxdp-sys" }
ctrlc = "3.2.5"
libbpf-rs = "0.20.1"
libc = "0.2.142"
nix = "0.26.2"
thiserror = "1.0.40"
log = "0.4.17"

[build-dependencies]
libbpf-cargo = "0.20.1"
