[package]
name = "camellia"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
libxdp-sys = { path = "../libxdp-sys" }
ctrlc = "3.2.5"
libbpf-rs = "0.20.1"
libc = "0.2.142"
nix = "0.26.2"
thiserror = "1.0.40"
log = "0.4.17"
once_cell = "1.17.1"
env_logger = "0.10.0"
etherparse = "0.13.0"
criterion = "0.4.0"
rlimit = "0.9.1"
tempdir = "0.3.7"

[build-dependencies]
libbpf-cargo = "0.20.1"

[dev-dependencies]
core_affinity = "0.8.0"

[[bench]]
name = "forward"
harness = false
