[package]
name = "camellia"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
libxdp-sys = { path = "../libxdp-sys" }
ctrlc = "3.2.5"
libbpf-rs = "0.20.1"
libc = "0.2.142"
nix = { version = "0.28.0", features = ["poll", "mman", "event"]}
thiserror = "1.0.40"
log = "0.4.17"
once_cell = "1.17.1"
env_logger = "0.11.3"
etherparse = "0.14.3"
criterion = "0.5.1"
rlimit = "0.10.1"
tracing = "0.1.37"
humansize = "2.1.3"


[dev-dependencies]
core_affinity = "0.8.0"
test-utils = { path = "../test-utils" }
