[package]
name = "libxdp-sys"
version = "1.3.1+v1.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow = "1.0.71"
bindgen = { version = "0.69.4", features = ["experimental"] }
cc = "1.0.79"
which = "6.0.1"

[lib]
doctest = false
